# granit_web

./: Makefile  docker-compose.yml  package-lock.json  package.json
backend/: .env  Dockerfile  main.py  package.json  pyproject.toml
backend/api/: __init__.py  buffers.py  dat.py  listener.py
backend/core/: settings.py
backend/services/: __init__.py  dat_converter.py  ico_tar_parser.py  listener.py  logger.py  predictor.py
backend/utils/: __init__.py  constants.py  save_temp_file.py  types.py
backend/ws/: __init__.py  initial_route.py  manager.py
frontend/: .env  :w  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  main.tsx
frontend/src/api/: Buffer.ts  Listener.ts  index.ts
frontend/src/components/: index.ts
frontend/src/components/DatToJpg/: DatToJpg.tsx
frontend/src/components/IsRadialMatrix/: IsRadialMatrix.tsx
frontend/src/components/ListenerToggler/: ListenerToggler.tsx
frontend/src/components/LogWindow/: ClearButton.tsx  HiddenLogs.tsx  ICOPointLogs.tsx  LogWindow.tsx  PointLogs.tsx  ToggleButton.tsx
frontend/src/components/Matrix/: Matrix.tsx
frontend/src/components/MultiBufferHandler/: MultiBufferHandler.tsx
frontend/src/components/NavBar/: NavBar.tsx
frontend/src/components/RadialMatrix/: RadialMatrix.tsx
frontend/src/components/SingleBufferHandler/: SingleBufferHandler.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/store/: store.ts
frontend/src/store/reducers/: IcoPoints.ts  index.ts  isLogsCollapsed.ts  points.ts  (+1 more)
frontend/src/types/: index.ts  point.ts
