[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dddyom <dddyom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
fastapi-cors = "^0.0.6"
pydantic = "^2.8.2"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
yolov5 = "^7.0.13"
websockets = "^13.1"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
